--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "googleapis": "^144.0.0",
     "luxon": "^3.5.0",
+    "moment": "^2.30.1",
     "openai": "^4.68.4",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
